samples/_failures_safe/1761330469_223e4a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1eb6f661.c: In function ‘main’:
./samples/SAFE/__tmp_1eb6f661.c:151:13: error: expected expression at end of input
  151 |             fprintf(stderr,
      |             ^~~~~~~
./samples/SAFE/__tmp_1eb6f661.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1eb6f661.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1eb6f661.c:151:13: error: expected declaration or statement at end of input
